# ixray-1.6

./: .gitignore  CHANGELOG.md  README.md
src/Editors/xrECore/: CMakeLists.txt  stdafx.h
src/Editors/xrECore/Editor/: D3DUtils.cpp  DeviceScreenshot.cpp  EDetailModel.cpp  EDetailModel.h  EStats.cpp  EThumbnail.cpp  EThumbnail.h  EThumbnailTexture.cpp  EditMeshRender.cpp  EditObjectEditor.cpp  EditObjectSkin.cpp  EditorChooseEvents.h  UIEditLightAnim.cpp  UIEditLightAnim.h  UIIConPicker.cpp  UIImageEditorForm.cpp  UIImageEditorForm.h  UIMinimapEditorForm.cpp  UIMinimapEditorForm.h  UIRenderForm.cpp  UIToolbar.cpp  device.cpp  device.h  render.cpp  render.h  ui_main.cpp
src/utils/xrLC/: Build.cpp  Build.h  Build_Load.cpp  CMakeLists.txt  OGF_Face.cpp  OGF_Face_Sphere.cpp  Sector.cpp  xrBuildRapidModel.cpp  xrFlex2OGF.cpp  xrLight.cpp  xrMU_Model_Calc_ogf.cpp  xrPhase_AdaptiveHT.cpp  xrPhase_MergeGeometry.cpp  xrPhase_MergeLM.cpp  xrPhase_MergeLM_Surface.cpp  xrPhase_ResolveMaterials.cpp  xrPhase_Subdivide.cpp  xrPhase_UVmap.cpp  xrPreOptimize.cpp  xrSaveOGF.cpp
src/utils/xrLC_Light/: CMakeLists.txt  LightThread.cpp  LightThread.h  Lightmap.cpp  MeshStructure.h  compiler.cpp  detail_slot_calculate.cpp  global_calculation_data.cpp  global_calculation_data.h  global_slots_data.cpp  global_slots_data.h  light_point.h  mu_model_face.h  mu_model_light_threads.cpp  xrDeflectoL_Direct.cpp  xrDeflector.cpp  xrDeflector.h  xrDeflectorLight.cpp  xrFace.cpp  xrLC_GlobalData.h  xrLightVertex.cpp  xrLight_Implicit.cpp  xrMU_Model.h  xrMU_Model_Calc_lighting.cpp  xrMU_Model_Calc_normals.cpp  xrMU_Model_Reference_Calc_Lighting.cpp
src/utils/xrLC_Light/embree_raytracing/: EmbreeDataStorage.h  EmbreeRayTrace.cpp  EmbreeRayTrace.h  EmbreeRayTrace_Details.cpp  EmbreeRayTrace_data.cpp
src/xrGameLA/: AI_PhraseDialogManager.cpp  AI_PhraseDialogManager.h  AcidFog.cpp  AcidFog.h  Actor.cpp  Actor.h  ActorAnimation.cpp  ActorCameras.cpp  ActorCondition.cpp  ActorCondition.h  ActorEatablesEffects.cpp  ActorEffector.cpp  ActorEffector.h  ActorEffector_script.cpp  ActorFollowers.cpp  ActorHudWetness.cpp  ActorInput.cpp  ActorMountedWeapon.cpp  ActorState.h  ActorVehicle.cpp  Actor_Events.cpp  Actor_Feel.cpp  Actor_Flags.h  Actor_Movement.cpp  Actor_Network.cpp  Actor_Weapon.cpp  AdvancedAfDetector.cpp  AdvancedAfDetector.h  AmebaZone.cpp  Artifact.cpp  Artifact.h  BastArtifact.cpp  BastArtifact.h  BlackGraviArtifact.cpp  BlackGraviArtifact.h  Bolt.cpp  Bolt.h  BoneProtections.cpp  Booster.h  BottleItem.cpp  (+964 more)
src/xrGameLA/ai/: ai_monsters_anims.h  ai_monsters_misc.cpp
src/xrGameLA/ai/crow/: ai_crow.cpp  ai_crow.h
src/xrGameLA/ai/monsters/: ai_monster_bones.cpp  ai_monster_defs.h  ai_monster_effector.cpp  ai_monster_effector.h  ai_monster_squad.cpp  ai_monster_squad.h  ai_monster_squad_attack.cpp  ai_monster_squad_manager.cpp  ai_monster_utils.cpp  anim_triple.h  anomaly_detector.cpp  anomaly_detector.h  control_animation.cpp  control_animation.h  control_animation_base.cpp  control_animation_base_load.cpp  control_animation_base_update.cpp  control_jump.cpp  control_jump.h  control_manager.cpp  control_manager_custom.cpp  control_manager_custom.h  control_melee_jump.h  control_path_builder.cpp  control_path_builder_base.cpp  control_path_builder_base.h  control_path_builder_base_path.cpp  control_rotation_jump.cpp  control_rotation_jump.h  control_sequencer.h  controlled_actor.cpp  controlled_actor.h  corpse_cover.cpp  melee_checker.cpp  monster_corpse_memory.cpp  monster_cover_manager.cpp  monster_enemy_manager.cpp  monster_enemy_manager.h  monster_enemy_memory.cpp  monster_event_manager.h  (+13 more)
src/xrGameLA/ai/monsters/basemonster/: base_monster.cpp  base_monster.h  base_monster_anim.cpp  base_monster_debug.cpp  base_monster_feel.cpp  base_monster_net.cpp  base_monster_script.cpp  base_monster_startup.cpp  base_monster_think.cpp
src/xrGameLA/ai/monsters/bloodsucker/: bloodsucker.cpp  bloodsucker.h  bloodsucker_alien.cpp  bloodsucker_attack_state_hide_inline.h  bloodsucker_attack_state_inline.h  bloodsucker_predator_inline.h  bloodsucker_predator_lite_inline.h  bloodsucker_state_manager.cpp  bloodsucker_vampire.h  bloodsucker_vampire_approach_inline.h  bloodsucker_vampire_effector.cpp  bloodsucker_vampire_effector.h  bloodsucker_vampire_execute.h  bloodsucker_vampire_execute_inline.h  bloodsucker_vampire_hide_inline.h  bloodsucker_vampire_inline.h
src/xrGameLA/ai/monsters/boar/: boar.cpp  boar.h  boar_state_manager.cpp
src/xrGameLA/ai/monsters/burer/: burer.cpp  burer.h  burer_state_attack.h  burer_state_attack_gravi_inline.h  burer_state_attack_inline.h  burer_state_attack_shield.h  (+5 more)
src/xrGameLA/ai/phantom/: phantom.cpp  phantom.h
src/xrGameLA/ai/rats/: ai_rat.cpp  ai_rat_templates.cpp
src/xrGameLA/ai/stalker/: ai_stalker.cpp  ai_stalker.h  ai_stalker_cover.cpp  ai_stalker_debug.cpp  ai_stalker_events.cpp  ai_stalker_fire.cpp  ai_stalker_impl.h  ai_stalker_inline.h  ai_stalker_misc.cpp  ai_stalker_script.cpp  ai_stalker_script_entity.cpp
src/xrGameLA/ai/trader/: ai_trader.cpp  ai_trader.h  trader_animation.cpp  trader_animation.h
src/xrGameLA/ik/: IKLimb.cpp  IKLimb.h  aint.cxx  eqn.cxx  limb.cxx  math3d.cpp
src/xrGameLA/tri-colliderknoopc/: dSortTriPrimitive.h  dTriBox.cpp  dTriBox.h  dTriCylinder.cpp  dTriList.cpp  dTriList.h
src/xrGameLA/ui/: ArtefactDetectorUI.h  CExtraContentFilter.cpp  KillMessageStruct.h  MMSound.cpp  Restrictions.cpp  Restrictions.h  UI3tButton.cpp  UI3tButton.h  UIActorInfo.cpp  UIActorProtectionInfo.cpp  UIActorProtectionInfo.h  UIAnimatedStatic.cpp  UIArtefactPanel.cpp  UIArtifactParams.cpp  UIArtifactParams.h  UIBtnHint.cpp  UIBtnHint.h  UIButton.cpp  UIButton.h  UIButton_script.cpp  UIBuyWeaponTab.cpp  UIBuyWndBase.h  UIBuyWndShared.cpp  UIBuyWndShared.h  UICarBodyWnd.cpp  UICarBodyWnd.h  UICarPanel.cpp  UICarPanel.h  UICellCustomItems.cpp  UICellCustomItems.h  UICellItem.cpp  UICellItem.h  UICellItemFactory.cpp  UICellItemFactory.h  UICharacterInfo.cpp  UICharacterInfo.h  UIChatWnd.cpp  UICheckButton.cpp  UICheckButton.h  UIColorAnimatorWrapper.cpp  (+208 more)
(+1036 files in other folders)
